--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>Welcome 欢迎</p>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Welcome 欢迎 I'm hosted with GitHub Pages.</p>
 </body>
 </html>
